Overflow toggle switch UI added

--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -22,4 +22,7 @@
     <SolidColorBrush x:Key="BreakpointFillBrush" Color="#FFE51400"/>
     <SolidColorBrush x:Key="BreakpointBorderBrush" Color="#FFF4DFDD"/>
     <SolidColorBrush x:Key="BreakpointLineBrush" Color="#34FF0000"/>
+    
+    <!--Misc-->
+    <SolidColorBrush x:Key="ShellSeparatorLineFillBrush" Color="#FF6E6E6E"/>
 </ResourceDictionary>
