Minor UI tweaks, popup options added

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
@@ -27,7 +27,7 @@
     </UserControl.Resources>
 
     <!--Main content-->
-    <Grid Background="#80000000">
+    <Grid>
         <SemanticZoom Style="{StaticResource SemanticZoomCustomStyle}">
             <SemanticZoom.ZoomedInView>
 
