--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -141,7 +141,7 @@
                         <!--Overlay for the expander-->
                         <Rectangle
                             Fill="{ThemeResource ShellSeparatorLineFillBrush}"
-                            VerticalAlignment="Bottom"
+                            VerticalAlignment="Top"
                             Canvas.ZIndex="1"
                             Height="1"
                             Width="48"
