Minor UI adjustments to the changelog view, Telerik UI updated

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/DevInfo/ChangelogViewFlyout.xaml
@@ -38,6 +38,9 @@
                     HorizontalAlignment="Stretch"
                     VerticalAlignment="Stretch"
                     IsItemClickEnabled="False">
+                    <ListView.Footer>
+                        <Grid Height="12"/>
+                    </ListView.Footer>
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <TextBlock
