Minor improvements to the custom reveal highlight effect

--- a/Brainf_ck-sharp.UWP/UserControls/Header/HeaderButtonControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Header/HeaderButtonControl.xaml
@@ -47,6 +47,13 @@
                             Target="RootGrid.Background"
                             Value="#40000000"/>
                     </VisualState.Setters>
+                    <Storyboard>
+                        <DoubleAnimation
+                            Storyboard.TargetName="LightBorder"
+                            Storyboard.TargetProperty="Opacity"
+                            To="0"
+                            Duration="0:0:0.2"/>
+                    </Storyboard>
                 </VisualState>
             </VisualStateGroup>
         </VisualStateManager.VisualStateGroups>
