Bug fixes and UI tweaks to the reveal highlight effects

--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
@@ -10,7 +10,13 @@
 
     <Button Style="{StaticResource WideButtonWithNoBackgroundStyle}"
             Click="Button_Clicked">
-        <Grid Background="{StaticResource WideLightBrushDarkShadeBackground}">
+        <Grid>
+            
+            <!--Light background-->
+            <Border
+                Opacity="0"
+                x:Name="LightDarkBackground"
+                Background="{StaticResource WideLightBrushDarkShadeBackground}"/>
 
             <!--Wide light border-->
             <Border
