--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -31,19 +31,21 @@
     <!--Border lights-->
     <brushes:LightingBrush
         x:Key="BorderLightBrush"
-        lights:PointerPositionSpotLight.IsTarget="True"/>
-    <brushes:LightingBrush 
-        x:Key="PopupElementsLightBrush"
         lights:PointerPositionSpotLight.IsTarget="True"
         Opacity="0"/>
+    <brushes:LightingBrush 
+        x:Key="PopupElementsLightBrush"
+        lights:PointerPositionSpotLight.IsTarget="True"/>
     
     <!--Wide light brushes-->
-    <brushes:LightingBrush x:Key="ElementsWideLightBrush"/>
+    <brushes:LightingBrush 
+        x:Key="ElementsWideLightBrush"
+        Opacity="0"/>
     <brushes:LightingBrush x:Key="PopupElementsWideLightBrush"/>
     
     <!--Light brush dark background-->
     <SolidColorBrush
         x:Key="WideLightBrushDarkShadeBackground"
-        Color="#40000000"
+        Color="#10000000"
         Opacity="0"/>
 </ResourceDictionary>
