--- a/Brainf_ck-sharp.UWP/UserControls/Header/HeaderButtonControl.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Header/HeaderButtonControl.xaml
@@ -74,6 +74,7 @@
 
             <!--Light-->
             <Border
+                Opacity="0.8"
                 x:Name="LightBorder"
                 Grid.Row="0"
                 Grid.RowSpan="2"
