--- a/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/VirtualKeyboard/Controls/KeyboardButton.xaml
@@ -29,6 +29,7 @@
                 x:Name="LightBorder"
                 Margin="-2"
                 BorderThickness="1"
+                Opacity="0.8"
                 BorderBrush="{StaticResource BorderLightBrush}"/>
 
             <!--Content-->
