Minor UI tweaks to some light effects

--- a/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
+++ b/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
@@ -88,6 +88,7 @@
                     
                     <!--Light border-->
                     <Border
+                        Opacity="0.8"
                         x:Name="LightBorder"
                         BorderThickness="2"
                         Margin="-2"/>
